fix dark mode button

--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@ body.dark .sidebar {
 }
 
 body.dark button {
-    background: #444;
+    background: #1976D2;
     color: rgb(255, 255, 255);
 }
 
